<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="@dimen/padding8dp">
<data>
<variable
    name="listener"
    type="com.example.shopapp.view.CartFragment.CartFragmentEventListener" />
</data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height50dp"
            android:background="#B4F2D2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:padding="@dimen/padding8dp"
                android:text="@string/totalPrice"
                android:textColor="@android:color/black"
                android:textSize="@dimen/textSize16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/totalPrice"
                android:padding="@dimen/padding8dp"
                android:text="@string/currencyUnit"
                android:textColor="@android:color/black"
                android:textSize="@dimen/textSize16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/totalPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:textColor="@android:color/holo_red_light"
                android:textSize="@dimen/textSize18sp" />
        </RelativeLayout>

        <Button
            android:id="@+id/cartSubmitBTN"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding4dp"
            android:text="@string/finalizeShopping"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
           android:onClick="@{listener::payBTNListener}" />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/cartSubmitBTN"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
            android:id="@+id/cartListRecyclerView"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>